examples/test/testpolicy7141.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7141
  namespace: namespace325
spec:
  podSelector:
    matchLabels:
      key42: value11
      key31: value9
      key47: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value49
          key43: value6
      podSelector:
        matchLabels:
          key12: value45
          key48: value46
